--- a/package.json
+++ b/package.json
@@ -7,16 +7,33 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite",
+    "start-dev": "vite --mode dev",
+    "build-dev": "tsc && vite build --mode dev",
+    "start-qa": "vite --mode qa",
+    "build-qa": "tsc && vite build --mode qa",
+    "start-stg": "vite --mode staging",
+    "build-stg": "tsc && vite build --mode staging",
+    "start-prod": "vite --mode prod"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
+    "i18next": "^24.2.0",
     "immer": "^10.1.1",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0",
+    "react-router-dom": "^7.1.1",
+    "sonarqube-scanner": "^3.3.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
