--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start-prod": "vite --mode prod"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "i18next": "^24.2.0",
@@ -26,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "sonarqube-scanner": "^3.3.0",
     "zustand": "^5.0.2"
