--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^4.2.0",
     "i18next": "^24.2.0",
     "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
